objects/project_cloud__Project__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Protected_EPV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the External Project View protected. (Requires and email that matches one of the project&apos;s Stakeholder Contacts</description>
        <inlineHelpText>When checked, enables protection for the External Project View.</inlineHelpText>
        <label>Protected External Project View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Resourcing_Mode__c</fullName>
        <description>The type of resourcing this project uses</description>
        <inlineHelpText>The type of resourcing this project uses</inlineHelpText>
        <label>Resourcing Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>project_cloud__Resourcing_Mode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Self_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, tasks under the project can be assigned to users by the users themselves.</inlineHelpText>
        <label>Self Assignable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Settings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a system field indicating the settings for the project</description>
        <inlineHelpText>Settings for the project</inlineHelpText>
        <label>Settings</label>
        <referenceTo>project_cloud__Project_Settings__c</referenceTo>
        <relationshipLabel>Projects Using Settings</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Sorting_Hash__c</fullName>
        <description>This field is used for sorting Project in the Cloud Coach Enterprise default order of Start, End, Name</description>
        <formula>BLANKVALUE(TEXT(project_cloud__Calculated_Start__c), &apos;9999-99-99&apos;) &amp; BLANKVALUE(TEXT(project_cloud__Calculated_End__c), &apos;9999-99-99&apos;) &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can be used to sort Projects using the CCProjex Enterprise default order</inlineHelpText>
        <label>Sorting Column</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Stage_Gate_Process__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Stage Gate Process</label>
        <referenceTo>project_cloud__Stage_Gate_Process__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Start__c</fullName>
        <description>Rollup summary of the Project Task Start dates. The Sprint Start Dates on the Project Phases are not used when determining this date</description>
        <inlineHelpText>The start date of the project derived from the earliest starting Project Task. The Sprint Start Dates on the Project Phase&apos;s are not used when determining this date</inlineHelpText>
        <label>Project Start Date</label>
        <summarizedField>project_cloud__Project_Phase__c.project_cloud__Start__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Status__c</fullName>
        <description>Formula that uses the rolled up status enum values to calculate the status of a project based on the status of all the project tasks</description>
        <formula>IF(project_cloud__Phase_Status_Minimum__c = project_cloud__Phase_Status_Maximum__c &amp;&amp; project_cloud__Phase_Status_Minimum__c = 0,
	$Label.project_cloud__project_status_completed
	,
	IF(project_cloud__Phase_Status_Minimum__c = project_cloud__Phase_Status_Maximum__c &amp;&amp; project_cloud__Phase_Status_Minimum__c &gt; 1,
		$Label.project_cloud__project_status_not_started
		,
		$Label.project_cloud__project_status_in_progress
	)
)</formula>
        <inlineHelpText>The overall status of the project currently</inlineHelpText>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Subscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this indicates the Project has been fully subscribed. i.e there are no more subscriptions that need to be created</description>
        <inlineHelpText>When checked, this indicates the Project which this task belongs to has been marked fully subscribed. (This is only applicable when allocating at the project level)</inlineHelpText>
        <label>Fully Subscribed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is populated by the Create Project button on the Ticket</description>
        <label>Ticket (Project was created from)</label>
        <referenceTo>project_cloud__Ticket__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Units__c</fullName>
        <description>Defining the calculation method for calculating an end date for a Project Task</description>
        <inlineHelpText>The units by which a project task duration is calculated. Estimated Hours project tasks run for the time input regardless of allocations, while Calendar Allocation project tasks can be shortened or lengthened by adding or removing resources from the task.</inlineHelpText>
        <label>Project Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Estimated Hours</fullName>
                    <default>true</default>
                    <label>Estimated Hours</label>
                </value>
                <value>
                    <fullName>Duration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Worked_Hours__c</fullName>
        <description>Sum of the hours completed on the Project, it&apos;s Phases, Tasks and Tickets using the time entry Work objects. This is calculated by the trigger WorkConfiguration</description>
        <inlineHelpText>This is a system object and should not be visible</inlineHelpText>
        <label>Entered Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All_Completed_Projects</fullName>
        <columns>NAME</columns>
        <columns>project_cloud__Start__c</columns>
        <columns>project_cloud__End__c</columns>
        <columns>AME_project_cloud_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>project_cloud__IsTemplate__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>AME_project_cloud_Status__c</field>
            <operation>equals</operation>
            <value>Completed,Canceled</value>
        </filters>
        <label>All Completed Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Project_Templates</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>project_cloud__IsTemplate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Project Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ITO_Foundations_Projects</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>ITF</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>ITFM</value>
        </filters>
        <label>ITO - Foundations Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>BMC_RF_ITO_Foundations_Staff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>project_cloud__All_Projects</fullName>
        <columns>NAME</columns>
        <columns>project_cloud__Health_Image__c</columns>
        <columns>project_cloud__Start__c</columns>
        <columns>project_cloud__End__c</columns>
        <columns>AME_project_cloud_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>project_cloud__IsTemplate__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>AME_project_cloud_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <label>All Open Projects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Project</fullName>
        <active>true</active>
        <label>Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Release</fullName>
        <active>true</active>
        <label>Release</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>project_cloud__Allocation__c</fullName>
        <label>Allocation</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>project_cloud__Subscription__c</fullName>
        <label>Active Subscription</label>
    </sharingReasons>
    <validationRules>
        <fullName>AME_project_cloud_update_health</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(project_cloud__Health__c)
 &amp;&amp; (
	NOT(ISCHANGED( AME_project_cloud_Health_Reason_Expanded__c )) ||
	ISBLANK( AME_project_cloud_Health_Reason_Expanded__c)
)</errorConditionFormula>
        <errorDisplayField>AME_project_cloud_Health_Reason_Expanded__c</errorDisplayField>
        <errorMessage>Please provide updated health reason to change health status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Health_Change_Requires_Reason</fullName>
        <active>false</active>
        <description>If the Health of a Project Task is changed, the reason field must be changed to explain why.</description>
        <errorConditionFormula>ISCHANGED(project_cloud__Health__c)
 &amp;&amp; (
	NOT(ISCHANGED(project_cloud__Health_Reason__c)) ||
	ISBLANK(project_cloud__Health_Reason__c)
)</errorConditionFormula>
        <errorDisplayField>project_cloud__Health_Reason__c</errorDisplayField>
        <errorMessage>When the Health is changed a reason must be given</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Units_Cannot_Be_Changed</fullName>
        <active>true</active>
        <description>Once the Project Units have been defined they are not able to be changed. This is to prevent massive recalculations on all tasks when the value is changed</description>
        <errorConditionFormula>(
	ISPICKVAL(project_cloud__Units__c, &apos;&apos;) ||
	ISCHANGED(project_cloud__Units__c)
) &amp;&amp; (
	/*Special Cases for when the migration helper updates the values*/
	NOT(ISPICKVAL(PRIORVALUE(project_cloud__Units__c), &quot;Fixed Duration&quot;)) ||
	NOT(ISPICKVAL(PRIORVALUE(project_cloud__Units__c), &quot;Fixed Work&quot;))
)</errorConditionFormula>
        <errorDisplayField>project_cloud__Units__c</errorDisplayField>
        <errorMessage>This value cannot be changed. Once set it is read only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Working_Days_Read_Only</fullName>
        <active>true</active>
        <description>The working days checkboxes are read only, once they are set when the project is created they cannot be modified.</description>
        <errorConditionFormula>ISCHANGED(project_cloud__IsWorking_Monday__c) ||
ISCHANGED(project_cloud__IsWorking_Tuesday__c) ||
ISCHANGED(project_cloud__IsWorking_Wednesday__c) ||
ISCHANGED(project_cloud__IsWorking_Thursday__c) ||
ISCHANGED(project_cloud__IsWorking_Friday__c) ||
ISCHANGED(project_cloud__IsWorking_Saturday__c) ||
ISCHANGED(project_cloud__IsWorking_Sunday__c)</errorConditionFormula>
        <errorMessage>The Working Days cannot be changed. Once set they are read only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Working_Days_Required</fullName>
        <active>true</active>
        <description>At least one working day needs to be selected or by definition the project will never be completed</description>
        <errorConditionFormula>NOT(project_cloud__IsWorking_Monday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Tuesday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Wednesday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Thursday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Friday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Saturday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Sunday__c)</errorConditionFormula>
        <errorMessage>Please select at least one Working Day</errorMessage>
    </validationRules>
</CustomObject>